--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
 MAIL_USERNAME=laraveldemo2018@gmail.com
-MAIL_PASSWORD=P@ssw0rd50500
+MAIL_PASSWORD=p@ssw0rd50500
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=laraveldemo2018@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
